<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ru.otus</groupId>
    <artifactId>OtusJava</artifactId>
    <version>2019-09-SNAPSHOT</version>

    <packaging>pom</packaging>

    <modules>
        <module>hw01-maven</module>
        <module>hw02-array-list</module>
        <module>hw03-garbage-collectors</module>
        <module>hw04-auto-logging</module>
        <module>hw05-test-framework</module>
        <module>hw06-atm</module>
        <module>hw07-atm-department</module>
        <module>hw08-json-object-writer</module>
        <module>hw09-homemade-orm</module>
        <module>hw12-web-server</module>
    </modules>

    <properties>
        <maven.compiler.source>12</maven.compiler.source>
        <maven.compiler.target>12</maven.compiler.target>
        <guava.version>28.1-jre</guava.version>
        <junit.version>5.5.2</junit.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>